cmake_minimum_required(VERSION 3.19)
project(cppCode)
set(CMAKE_CXX_STANDARD 14)

file (GLOB_RECURSE files *.cpp)
foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    
    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()
add_executable(Acwung282_MergingOfStones Acwung282_MergingOfStones.cpp)
add_executable(ExponentialEnumeration ExponentialEnumeration.cpp)
add_executable(Acwing897_LongestCommonSubsequence  "Acwing897_LongestCommonSubsequence .cpp")
add_executable(Acwing95 Acwing95.cpp)
add_executable(Acwing172 Acwing172.cpp)
add_executable(dijkstraClass dijkstraClass.cpp)
add_executable(FIFO FIFO.cpp)
add_executable(PushTheThreeDimensionalBox PushTheThreeDimensionalBox.cpp)
add_executable(o1Bag o1Bag.cpp)
add_executable(MyAtoi MyAtoi.cpp)
add_executable(lut lut.cpp)
add_executable(LongestAscendingSubsequence LongestAscendingSubsequence.cpp)
add_executable(leetcode957PrisonAfterNDays leetcode957PrisonAfterNDays.cpp)
add_executable(leetcode10 leetcode10.cpp)
add_executable(Acwing482_ChorusFormation Acwing482_ChorusFormation.cpp)
add_executable(Acwing1012_SisterCity Acwing1012_SisterCity.cpp )
add_executable(leetcode15_ThreeSum leetcode15_ThreeSum.cpp)
add_executable(BitOperationTest  "BitOperationTest .cpp")
add_executable(Acwing_3483PowerOfTwo Acwing_3483PowerOfTwo.cpp)
add_executable(Acwing_1225RegularProblem Acwing_1225RegularProblem.cpp)
add_executable(ThreeKingdoms ThreeKingdoms.cpp)
add_executable(ThreeKingdoms2 ThreeKingdoms2.cpp)
add_executable(DigitalTriangle Acwing_898DigitalTriangle.cpp)
add_executable(Acwing1015_PickPeanuts Acwing1015_PickPeanuts.cpp)
add_executable(Acwing1018_MinimumToll Acwing1018_MinimumToll.cpp)
add_executable(leetcode_5793NearestExit leetcode_5793NearestExit.cpp)
add_executable(Acwing275_PassingANote Acwing275_PassingANote.cpp)
add_executable(Acwing1016MaximumAscendingSubsequenceSum Acwing1016MaximumAscendingSubsequenceSum.cpp)
add_executable(Acwing1010_MissileInterception Acwing1010_MissileInterception.cpp)
add_executable(Acwing3607_PrintDate Acwing3607_PrintDate.cpp)
add_executable(Acwing187_MissileDefenseSystem Acwing187_MissileDefenseSystem.cpp)
add_executable(Acwing902_ShortestEditDistance  "Acwing902_ShortestEditDistance .cpp")
add_executable(Acwing1012_SisterCity2 Acwing1012_SisterCity2.cpp)
add_executable(Acwing1024_PackingProblem Acwing1024_PackingProblem.cpp)
add_executable(Acwing1022_PokemonSReception Acwing1022_PokemonSReception.cpp)
add_executable(Acwing154_SlidingWindow Acwing154_SlidingWindow.cpp)
add_executable(Acwing1020_diver Acwing1020_diver.cpp)
add_executable(Acwing1019_CelebrationParty Acwing1019_CelebrationParty.cpp)
add_executable(Acwing1023_BuyBook Acwing1023_BuyBook.cpp)
add_executable(ccf201312_1theMostFrequentOccurrences ccf201312_1theMostFrequentOccurrences.cpp)
add_executable(ccf201403_1OppositeNumber ccf201403_1OppositeNumber.cpp)
add_executable(Ccf201403_2Window Ccf201403_2Window.cpp)
add_executable(Ccf201403_3CommandLineOptions Ccf201403_3CommandLineOptions.cpp)
add_executable(Ccf201503_1ImageRotation Ccf201503_1ImageRotation.cpp)
add_executable(Ccf201503_2NumberSort Ccf201503_2NumberSort.cpp)
add_executable(Acwing11_KnapsackProblemForTheNumberOfSolutions Acwing11_KnapsackProblemForTheNumberOfSolutions.cpp)
add_executable(Acwing1021_CurrencySystem Acwing1021_CurrencySystem.cpp)
add_executable(Acwing1049_TheThiefAfu Acwing1049_TheThiefAfu.cpp)
add_executable(Acwing1053_RepairDNA Acwing1053_RepairDNA.cpp)
add_executable(Acwing1097_LakeCounting Acwing1097_LakeCounting.cpp)
add_executable(Acwing1128_Messager Acwing1128_Messager.cpp)
add_executable(Acwing850_DijkstraII Acwing850_DijkstraII.cpp)
add_executable(Acwing1127_SweetButter Acwing1127_SweetButter.cpp)
add_executable(Acwing1126_MinimumCost Acwing1126_MinimumCost.cpp)
add_executable(ccf202006_2_Acwing3288 ccf202006_2_Acwing3288.cpp)
add_executable(ccf201909_2_Acwing3283 ccf201909_2_Acwing3283.cpp)
add_executable(Acwing3277 Acwing3277.cpp)
add_executable(Acwing3278 Acwing3278.cpp)
add_executable(test test.cpp)
add_executable(PriorityQueue C++STL/PriorityQueue.cpp)
add_executable(Acwing1064_the-little-king Acwing1064_the-little-king.cpp)
add_executable(ccf2021_9_2 ccf2021_9_2.cpp)
add_executable(ccf2021_04_3 ccf2021_04_3.cpp)
add_executable(Acwing97theSumOfAFew Acwing97theSumOfAFew.cpp)
add_executable(Acwing100increaseOrDecreaseInTheSequence Acwing100increaseOrDecreaseInTheSequence.cpp)
add_executable(Acwing524AngryBirds Acwing524AngryBirds.cpp)
add_executable(AcWing3295StarTrek AcWing3295StarTrek.cpp)
add_executable(ccf202109_4NetworkCardCard ccf202109_4NetworkCardCard.cpp)
add_executable(ccf202006_3Markdown ccf202006_3Markdown.cpp)
add_executable(Acwing256MaximumxORSum Acwing256MaximumxORSum.cpp)
add_executable(Acwing1275_maximumNumber Acwing1275_maximumNumber.cpp)
add_executable(Acwing245CanYouAnswerTheseQuestions Acwing245CanYouAnswerTheseQuestions.cpp)
add_executable(Acwing246IntervalMaximumCommonDivisor Acwing246IntervalMaximumCommonDivisor.cpp)
add_executable(Acwing2058ClumsyFingers Acwing2058ClumsyFingers.cpp)
add_executable(Acwing2060TheCowBeauty Acwing2060TheCowBeauty.cpp)
add_executable(Acwing1106PeaksAndValleys Acwing1106PeaksAndValleys.cpp)
add_executable(Acwing2019theTractor Acwing2019theTractor.cpp)
add_executable(AcWing2005Horseshoe AcWing2005Horseshoe.cpp)
add_executable(Acwing1996DisturbTheLetters Acwing1996DisturbTheLetters.cpp)
add_executable(Acwing4208phoneNumber Acwing4208phoneNumber.cpp)
add_executable(Acwing420LongestLegalParenthesisSubsequence Acwing420LongestLegalParenthesisSubsequence.cpp)
add_executable(AcWing241LoulanTotem AcWing241LoulanTotem.cpp)
add_executable(AcWing242ASimpleIntegerProblem "AcWing242 ASimpleIntegerProblem.cpp")
add_executable(AcWing1969VarietiesOfAdjacent AcWing1969VarietiesOfAdjacent.cpp)
add_executable(Acwing253OrdinaryEquilibriumTree Acwing253OrdinaryEquilibriumTree.cpp)
add_executable(Acwing1960twinkle Acwing1960twinkle.cpp)
add_executable(Acwing4211SequenceRearrangement Acwing4211SequenceRearrangement.cpp)
add_executable(Acwing1945TheCowBaseball Acwing1945TheCowBaseball.cpp)
add_executable(Acwing1934BessieSlowedHerPace Acwing1934BessieSlowedHerPace.cpp)
add_executable(Acwing788TheNumberOfSequencePairs Acwing788TheNumberOfSequencePairs.cpp)
add_executable(Acwing1929TheMirrorFields Acwing1929TheMirrorFields.cpp)
add_executable(Acwing1922LazyCow Acwing1922LazyCow.cpp)
add_executable(Acwing1904TheCowJogging Acwing1904TheCowJogging.cpp)
add_executable(Acwing3167StarsOrTrees Acwing3167StarsOrTrees.cpp)
add_executable(Acwing2424Bowling Acwing2424Bowling.cpp)
add_executable(AcWing2680DivideTheData AcWing2680DivideTheData.cpp)
add_executable(Acwing1828_SearchKeywords Acwing1828_SearchKeywords.cpp)
add_executable(Acwing_899EditDistance Acwing_899EditDistance.cpp)
add_executable(Acwing1884COW Acwing1884COW.cpp)
add_executable(AcWing1292GoldbachConjecture AcWing1292GoldbachConjecture.cpp)
add_executable(AcWing1293SherlockAndHisGirlfriend AcWing1293SherlockAndHisGirlfriend.cpp)
add_executable(AcWing196PrimeNumbersFromThe AcWing196PrimeNumbersFromThe.cpp)
add_executable(Acwing170AdditionSequence Acwing170AdditionSequence.cpp)
add_executable(Acwing1855AngryCow Acwing1855AngryCow.cpp)
add_executable(Acwing1875BessieSRevenge Acwing1875BessieSRevenge.cpp)
add_executable(Awing105ChineseValentineSDayThe Awing105ChineseValentineSDayThe.cpp)
add_executable(Acwing106DynamicMedian Acwing106DynamicMedian.cpp)
add_executable(Acwing108OddNumberProblem Acwing108OddNumberProblem.cpp)
add_executable(Acwing109GeniusACM Acwing109GeniusACM.cpp)
add_executable(Acwing110Sunscreen Acwing110Sunscreen.cpp)
add_executable(Acwing122CandyPass Acwing122CandyPass.cpp)
add_executable(Acwing111CorralScheduled Acwing111CorralScheduled.cpp)
add_executable(Lower_boundAndUpper_bound C++STL/Lower_boundAndUpper_bound.cpp)
add_executable(Acwing908MaximumNumberOfDisjointIntervals Acwing908MaximumNumberOfDisjointIntervals.cpp)
add_executable(Acwing905IntervalForChoosing Acwing905IntervalForChoosing.cpp)
add_executable(Acwing802IntervalAnd Acwing802IntervalAnd.cpp)
add_executable(Acwing112RadarEquipment Acwing112RadarEquipment.cpp)
add_executable(Acwing114TheKingGame Acwing114TheKingGame.cpp)
add_executable(Acwing1789WhyDidTheCowCrossTheRoadII Acwing1789WhyDidTheCowCrossTheRoadII.cpp)
add_executable(Acwing126OneOfTheLargestAnd Acwing126OneOfTheLargestAnd.cpp)
add_executable(Acwing118Fractal Acwing118Fractal.cpp)
add_executable(Acwing1762CattleShuffle Acwing1762CattleShuffle.cpp)
add_executable(Acwing1750Lifeguard Acwing1750Lifeguard.cpp)
add_executable(Acwing837TheNumberOfConnectedBlockMidpoints Acwing837TheNumberOfConnectedBlockMidpoints.cpp)
add_executable(Acwing240FoodCycle Acwing240FoodCycle.cpp)
add_executable(Acwing477NeuralNetwork Acwing477NeuralNetwork.cpp)
add_executable(AcWing115ToDyeTheTree AcWing115ToDyeTheTree.cpp)
add_executable(Acwing2437Splay Acwing2437Splay.cpp)
add_executable(Acwing785Quicksort Acwing785Quicksort.cpp)
add_executable(AcWing1131SavingPrivateRyan AcWing1131SavingPrivateRyan.cpp)
add_executable(Acwing3205TheOptimalCatering Acwing3205TheOptimalCatering.cpp)
add_executable(AcWing3317GravityBall AcWing3317GravityBall.cpp)
add_executable(ccf202109_3PulsedNeuralNetwork ccf202109_3PulsedNeuralNetwork.cpp)
add_executable(CCF201404_WirelessNetwork CCF201404_WirelessNetwork.cpp)
add_executable(AcWing3230Game AcWing3230Game.cpp)
add_executable(Acwing3255drivingDirections Acwing3255drivingDirections.cpp)
add_executable(AcWing1303FibonacciSumOfFirstNTerms AcWing1303FibonacciSumOfFirstNTerms.cpp)
add_executable(AcWing1304FibonacciForJiaJia AcWing1304FibonacciForJiaJia.cpp)
add_executable(AcWing3492LoadBalancer AcWing3492LoadBalancer.cpp)
add_executable(Acwing3491PerfectSquares Acwing3491PerfectSquares.cpp)
add_executable(AcWing90StringConversion AcWing90StringConversion.cpp)
add_executable(Acwing1118TheyWereDividedIntoMassGroups Acwing1118TheyWereDividedIntoMassGroups.cpp)
add_executable(AcWing1068CircularStoneAmalgamation AcWing1068CircularStoneAmalgamation.cpp)
add_executable(Acwing320EnergyNecklace Acwing320EnergyNecklace.cpp)
add_executable(Acwing4310DFSOfTree Acwing4310DFSOfTree.cpp)
add_executable(AcWing3300FoodTransportation AcWing3300FoodTransportation.cpp)
add_executable(Acwing479PlusBinaryTree Acwing479PlusBinaryTree.cpp)
add_executable(AcWing1069PartitionOfConvexPolygons AcWing1069PartitionOfConvexPolygons.cpp)
add_executable(Acwing1174ThePopularCow Acwing1174ThePopularCow.cpp)
add_executable(Acwing1072TheLongestPathToATree Acwing1072TheLongestPathToATree.cpp)
add_executable(Acwing1073TheCenterOfTheTree Acwing1073TheCenterOfTheTree.cpp)
add_executable(Weekst3 Weekst3.cpp)
add_executable(Weekst2 Weekst2.cpp)
add_executable(Acwing1075DigitalConversion Acwing1075DigitalConversion.cpp)
add_executable(Acwing4313FullBinaryTreeIsometricPath Acwing4313FullBinaryTreeIsometricPath.cpp)
add_executable(AcWing1074TwoForkAppleTree AcWing1074TwoForkAppleTree.cpp)
add_executable(Acwing285PROMWithoutTheBoss Acwing285PROMWithoutTheBoss.cpp)